--- a/personal-folder/anakin's_apprentice_years.html
+++ b/personal-folder/anakin's_apprentice_years.html
@@ -41,10 +41,10 @@
             <img class="logo" src="image/Anakin Skywalker The Chosen One's Legacy.png" >
         </a>
             <nav>
-                <a href="anikan_skywalker_index.html" >Home</a>
+                <a href="anakin_skywalker_index.html" >Home</a>
                 <a href="anakin's_younger_years.html"> Page 2</a>
                 <a href="anakin's_apprentice_years.html">Page 3</a>
-                <a href="anikin_turns_to_the_dark_side.html">Page 4</a>
+                <a href="anakin_turns_to_the_dark_side.html">Page 4</a>
                 <a href="quotes_and_memorable_moments_of_anakin_skywalker.html">Page 5</a>
             </nav>
         <!-- Add navigation or other header content if needed -->
