--- a/personal-folder/anakin_skywalker_index.html
+++ b/personal-folder/anakin_skywalker_index.html
@@ -28,18 +28,6 @@ header {
   margin-top: 20px;
 }
 
-.grid-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-gap: 20px;
-  justify-items: center;
-}
-
-.grid-container img {
-  max-width: 10%;
-  height: auto;
-  margin-bottom: 20px;
-}
 
         
 
@@ -49,15 +37,15 @@ header {
 </head>
 <body>
     <header>
-        <h1>How Anikan Skywalker is the Chosen One.</h1>
+        <h1>How Anakin Skywalker is the Chosen One.</h1>
         <a id="logo_link" href="anakin_skywalker_index.html">
             <img class="logo" src="image/Anakin Skywalker The Chosen One's Legacy.png" >
         </a>
             <nav>
-                <a href="anikan_skywalker_index.html" >Home</a>
+                <a href="anakin_skywalker_index.html" >Home</a>
                 <a href="anakin's_younger_years.html"> Page 2</a>
                 <a href="anakin's_apprentice_years.html">Page 3</a>
-                <a href="anikin_turns_to_the_dark_side.html">Page 4</a>
+                <a href="anakin_turns_to_the_dark_side.html">Page 4</a>
                 <a href="quotes_and_memorable_moments_of_anakin_skywalker.html">Page 5</a>
             </nav>
         <!-- Add navigation or other header content if needed -->
