--- a/personal-folder/anakin_turns_to_the_dark_side.html
+++ b/personal-folder/anakin_turns_to_the_dark_side.html
@@ -41,10 +41,10 @@
             <img class="logo" src="image/Anakin Skywalker The Chosen One's Legacy.png" >
         </a>
             <nav>
-                <a href="anikan_skywalker_index.html" >Home</a>
+                <a href="anakin_skywalker_index.html" >Home</a>
                 <a href="anakin's_younger_years.html"> Page 2</a>
                 <a href="anakin's_apprentice_years.html">Page 3</a>
-                <a href="anikin_turns_to_the_dark_side.html">Page 4</a>
+                <a href="anakin_turns_to_the_dark_side.html">Page 4</a>
                 <a href="quotes_and_memorable_moments_of_anakin_skywalker.html">Page 5</a>
             </nav>
         <!-- Add navigation or other header content if needed -->
@@ -52,7 +52,7 @@
 
     <main class="content">
         <img src="image/download (2).jpeg" alt="First Image for page 4">
-        <p> "Anikin's Turn to the Dark Side," is a gripping exploration of the momentous turning point in Anakin's life when he succumbs to the allure of the dark side and becomes Darth Vader. The page delves deep into the events, emotions, and choices that led to this dramatic transformation. Through compelling content and dramatic imagery, it immerses visitors in the darkness that shrouds Anakin's later years. This section offers a powerful examination of the inner conflict and external forces that drive Anakin's descent into one of the most iconic villains in cinematic history. The two images featured on this page capture the ominous and menacing presence that Darth Vader embodies, providing a visually striking portrayal of this critical juncture in Anakin's life.</p>
+        <p> "Anakin's Turn to the Dark Side," is a gripping exploration of the momentous turning point in Anakin's life when he succumbs to the allure of the dark side and becomes Darth Vader. The page delves deep into the events, emotions, and choices that led to this dramatic transformation. Through compelling content and dramatic imagery, it immerses visitors in the darkness that shrouds Anakin's later years. This section offers a powerful examination of the inner conflict and external forces that drive Anakin's descent into one of the most iconic villains in cinematic history. The two images featured on this page capture the ominous and menacing presence that Darth Vader embodies, providing a visually striking portrayal of this critical juncture in Anakin's life.</p>
         <img src="image/download (3).jpeg" alt="Second Image for page 4">
     </main>
 
