--- a/personal-folder/anakin_skywalker_index.html
+++ b/personal-folder/anakin_skywalker_index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -61,14 +62,14 @@
         <h1>How Anikan Skywalker is the Chosen One.</h1>
         
         <a id="logo_link" href="index.html">
-            <img class="logo" src="image/Anakin Skywalker The Chosen One's Legacy.png" >
-        </a>
+            <img class="logo" src="image/Anakin Skywalker The Chosen One's Legacy.png" alt="Anakin Skywalker - The Chosen One's Legacy">
+
             <nav>
-                <a href="anakin_skywalker_index.html" >Home</a>
-                <a href="anakin's_younger_years.html"> Page 2</a>
-                <a href="anakin's_apprentice_years.html">Page 3</a>
-                <a href="anakin_turns_to_the_dark_side.html">Page 4</a>
-                <a href="quotes_and_memorable_moments_of_anakin_skywalker.html">Page 5</a>
+                <a href="anakin_skywalker_index.html">Home</a>
+                <a href="anakins_younger_years.html">Page 2</a>
+                <a href="anakins_apprentice_years.html">Page 3</a>
+                <a href="anakin_turns_to_the_dark_side.html">Page 4</a> 
+                <a hred="quotes_and_memorable_moments_of_anakin_skywalker">Page 5</a>
             </nav>
         <!-- Add navigation or other header content if needed -->
     </header>
