--- a/personal-folder/quotes_of_anakin_skywalker_and_darth_vader.html
+++ b/personal-folder/quotes_of_anakin_skywalker_and_darth_vader.html
@@ -45,14 +45,14 @@
 
         </div>
         <div class="column">
-          <img src="image3.jpg" alt="Image 3">
+          <img src="image/Anikan.jpeg" alt="Image 3">
           <p>"He's as clumsy as he is stupid."-Star Wars Episode V: The Empire Strikes Back</p>
           <p>You don't know the power of the dark side! I must obey my master."- Star Wars Episode VI:Return of the Jedi</p>
           <P>"This will be a day long remembered. It has seen the end of Kenobi. It will soon see the end of the rebellion."- Star Wars Episode IV: A New Hope</P>
           <p>"I am altering the dearl. Pray I don't alter it any further.-Star Wars Episode V: The empire Strikes Back</p>
           <p>"Be careful not to choke on your aspirations"</p>
           <p>"You have controlled your fear. Now, release your anger. Only your hatred can destroy me."- Star Wars Episode V: The Empire Strikes Back </p>
-          <p>"WHen I left you, I was but the learner. Now I am the master."-Star wars Episode IV: A New Hope.</p>
+          <p>"When I left you, I was but the learner. Now I am the master."-Star wars Episode IV: A New Hope.</p>
         </div>
         </div>
      
