--- a/personal-folder/quotes_of_anakin_skywalker_and_darth_vader.html
+++ b/personal-folder/quotes_of_anakin_skywalker_and_darth_vader.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <h1>How Anikan Skywalker is the Chosen One.</h1>
-        <h2>Quotes and memorable moments of Anakin Skywalker</h2>
+        <h2>Quotes of Anakin Skywalker and Darth Vader</h2>
         
         <a id="logo_link" href="index.html">
             <img class="logo" src="image/Anakin Skywalker The Chosen One's Legacy.png" >
@@ -42,17 +42,27 @@
           <p>"Letting Go of our Attachments is a difficult struggle for all of us."- Star Wars: The Clone Wars</p>
           <p>"Mercy doesn't defeat an enemy, Master. Which is why you're gonna lose."- Obi-Wan Kenobi</p>
           <p>"You underestimate my power" Star Wars: Episode III- Revenge of the Sith</p>
-
+          <p>"I am more powerful than the Chancellor. I can overthrow him. And together, you and I can rule the galaxy."</p>
+          <P>"Sometimes, we must let go of our pride and do what is requested of us"</P>
+          <p>"The Jedi are selfless. They only care about others"</p>
+          <p>"Love won't save you, Padme. Only my new powers can do that. "</p>
+          <p>"Life seems so much simpler when you're fixing things"</p>
+          <p>"But try to remember, always put purpose ahead of your feelings."</p>
         </div>
         <div class="column">
           <img src="image/Anikan.jpeg" alt="Image 3">
           <p>"He's as clumsy as he is stupid."-Star Wars Episode V: The Empire Strikes Back</p>
           <p>You don't know the power of the dark side! I must obey my master."- Star Wars Episode VI:Return of the Jedi</p>
           <P>"This will be a day long remembered. It has seen the end of Kenobi. It will soon see the end of the rebellion."- Star Wars Episode IV: A New Hope</P>
-          <p>"I am altering the dearl. Pray I don't alter it any further.-Star Wars Episode V: The empire Strikes Back</p>
+          <p>"I am altering the dearl. Pray I don't alter it any further.-Star Wars Episode V: The Empire Strikes Back</p>
           <p>"Be careful not to choke on your aspirations"</p>
           <p>"You have controlled your fear. Now, release your anger. Only your hatred can destroy me."- Star Wars Episode V: The Empire Strikes Back </p>
           <p>"When I left you, I was but the learner. Now I am the master."-Star wars Episode IV: A New Hope.</p>
+          <p>"Anakin is gone. I am what remains.. I am not your failure, Obi-Wan. You didn't kill Anikan Skywalker, I did."</p>
+          <p>"Luke, you can destroy the Emperor. He has foreseen this. It is your destiny. Join me, and together we can rule the galaxy as father and son."</p>
+          <p>"Strong people don't put others down. They lift them up"</p>
+          <p>"The force is with you. Young Skywalker. But you are not a Jedi Yet"</p>
+          <p></p>
         </div>
         </div>
      
